--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 	<groupId>org.springframework.data</groupId>
 	<artifactId>spring-data-neo4j-parent</artifactId>
-	<version>5.3.10.BUILD-SNAPSHOT</version>
+	<version>5.4.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Spring Data Neo4j</name>
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.3.10.BUILD-SNAPSHOT</version>
+		<version>2.6.0-SNAPSHOT</version>
 	</parent>
 
 	<modules>
@@ -42,7 +42,7 @@
 		<project.type>multi</project.type>
 
 		<neo4j.ogm.version>3.2.23</neo4j.ogm.version>
-		<springdata.commons>2.3.10.BUILD-SNAPSHOT</springdata.commons>
+		<springdata.commons>2.6.0-SNAPSHOT</springdata.commons>
 	</properties>
 
 	<developers>
