--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,9 @@
 	</modules>
 
 	<properties>
+		<java.version>11</java.version>
+		<source.level>${java.version}</source.level>
+
 		<dist.id>spring-data-neo4j</dist.id>
 
 		<project.type>multi</project.type>
@@ -211,6 +214,13 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration combine.self="override">
+					<release>${java.version}</release>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
