--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
 		<project.type>multi</project.type>
 
-		<neo4j.ogm.version>3.2.23</neo4j.ogm.version>
+		<neo4j.ogm.version>4.0.0-SNAPSHOT</neo4j.ogm.version>
 		<springdata.commons>2.6.0-SNAPSHOT</springdata.commons>
 	</properties>
 
