--- a/spring-data-neo4j/pom.xml
+++ b/spring-data-neo4j/pom.xml
@@ -39,7 +39,7 @@
 		<caffeine.version>2.6.2</caffeine.version>
 		<el-api.version>2.2</el-api.version>
 		<javax-jaxb.version>2.3.1</javax-jaxb.version>
-		<neo4j.version>3.5.18</neo4j.version>
+		<neo4j.version>4.3.4</neo4j.version>
 		<ogm.properties>ogm-bolt.properties</ogm.properties>
 		<spotbugs-maven-plugin.version>3.1.3</spotbugs-maven-plugin.version>
 		<spotbugs.version>3.1.3</spotbugs.version>
@@ -186,6 +186,12 @@
 			<artifactId>neo4j-harness</artifactId>
 			<version>${neo4j.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-nop</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
