--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.6.0-SNAPSHOT</version>
+		<version>2.7.7</version>
 	</parent>
 
 	<modules>
@@ -37,15 +37,15 @@
 	</modules>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 		<source.level>${java.version}</source.level>
 
 		<dist.id>spring-data-neo4j</dist.id>
 
 		<project.type>multi</project.type>
 
-		<neo4j.ogm.version>4.0.0-SNAPSHOT</neo4j.ogm.version>
-		<springdata.commons>2.6.0-SNAPSHOT</springdata.commons>
+		<neo4j.ogm.version>4.0.1</neo4j.ogm.version>
+		<springdata.commons>2.7.7</springdata.commons>
 	</properties>
 
 	<developers>
@@ -197,20 +197,6 @@
 			</build>
 		</profile>
 	</profiles>
-
-	<repositories>
-		<repository>
-			<id>spring-libs-snapshot</id>
-			<url>https://repo.spring.io/libs-snapshot</url>
-		</repository>
-	</repositories>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-plugins-release</id>
-			<url>https://repo.spring.io/plugins-release</url>
-		</pluginRepository>
-	</pluginRepositories>
 
 	<build>
 		<plugins>
