Migrate to JakartaEE and Spring Data 3.0.3.

--- a/spring-data-neo4j/pom.xml
+++ b/spring-data-neo4j/pom.xml
@@ -27,7 +27,7 @@
 	<parent>
 		<groupId>org.springframework.data</groupId>
 		<artifactId>spring-data-neo4j-parent</artifactId>
-		<version>5.4.0-SNAPSHOT</version>
+		<version>5.5.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -36,13 +36,19 @@
 
 		<java-module-name>spring.data.neo4j</java-module-name>
 
-		<caffeine.version>2.6.2</caffeine.version>
-		<el-api.version>2.2</el-api.version>
-		<javax-jaxb.version>2.3.1</javax-jaxb.version>
-		<neo4j.version>4.3.4</neo4j.version>
+		<jakarta.version>2.1.0</jakarta.version>
+		<jakarta.enterprise.version>4.0.1</jakarta.enterprise.version>
+		<jakarta.xml.version>4.0.0</jakarta.xml.version>
+		<jakarta.servlet.version>6.0.0</jakarta.servlet.version>
+		<jakarta.validation.version>3.0.2</jakarta.validation.version>
+		<hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
+		<glassfish-jakarta-impl.version>4.0.2</glassfish-jakarta-impl.version>
+		<neo4j.version>5.5.0</neo4j.version>
 		<ogm.properties>ogm-bolt.properties</ogm.properties>
-		<spotbugs-maven-plugin.version>3.1.3</spotbugs-maven-plugin.version>
-		<spotbugs.version>3.1.3</spotbugs.version>
+
+		<caffeine.version>3.1.5</caffeine.version>
+		<spotbugs-maven-plugin.version>4.7.3</spotbugs-maven-plugin.version>
+		<spotbugs.version>4.7.3</spotbugs.version>
 	</properties>
 
 
@@ -89,24 +95,24 @@
 		</dependency>
 
 		<dependency>
-			<groupId>javax.interceptor</groupId>
-			<artifactId>javax.interceptor-api</artifactId>
-			<version>1.2.1</version>
+			<groupId>jakarta.interceptor</groupId>
+			<artifactId>jakarta.interceptor-api</artifactId>
+			<version>${jakarta.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>javax.enterprise</groupId>
-			<artifactId>cdi-api</artifactId>
-			<version>${cdi}</version>
+			<groupId>jakarta.enterprise</groupId>
+			<artifactId>jakarta.enterprise.cdi-api</artifactId>
+			<version>${jakarta.enterprise.version}</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
 
 		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>javax.annotation-api</artifactId>
-			<version>${javax-annotation-api}</version>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>${jakarta.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -118,32 +124,31 @@
 		</dependency>
 
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>${jakarta.servlet.version}</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
 
 		<!-- JSR 303 Validation -->
 		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>${validation}</version>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>${jakarta.validation.version}</version>
 			<optional>true</optional>
 		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>5.1.2.Final</version>
+			<version>${hibernate-validator.version}</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.glassfish</groupId>
-			<artifactId>javax.el</artifactId>
-			<version>3.0.0</version>
+			<artifactId>jakarta.el</artifactId>
+			<version>${glassfish-jakarta-impl.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -172,13 +177,6 @@
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-ogm-bolt-driver</artifactId>
 			<version>${neo4j.ogm.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-ogm-bolt-native-types</artifactId>
-			<version>${neo4j.ogm.version}</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -276,15 +274,15 @@
 			</activation>
 			<dependencies>
 				<dependency>
-					<groupId>javax.xml.bind</groupId>
-					<artifactId>jaxb-api</artifactId>
-					<version>${javax-jaxb.version}</version>
+					<groupId>jakarta.xml.bind</groupId>
+					<artifactId>jakarta.xml.bind-api</artifactId>
+					<version>${jakarta.xml.version}</version>
 					<optional>true</optional>
 				</dependency>
 				<dependency>
 					<groupId>org.glassfish.jaxb</groupId>
 					<artifactId>jaxb-runtime</artifactId>
-					<version>${javax-jaxb.version}</version>
+					<version>${glassfish-jakarta-impl.version}</version>
 					<optional>true</optional>
 				</dependency>
 			</dependencies>
