--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 	<groupId>org.springframework.data</groupId>
 	<artifactId>spring-data-neo4j-parent</artifactId>
-	<version>5.4.0-SNAPSHOT</version>
+	<version>5.5.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Spring Data Neo4j</name>
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.6.0-SNAPSHOT</version>
+		<version>3.0.3</version>
 	</parent>
 
 	<modules>
@@ -37,15 +37,15 @@
 	</modules>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 		<source.level>${java.version}</source.level>
 
 		<dist.id>spring-data-neo4j</dist.id>
 
 		<project.type>multi</project.type>
 
-		<neo4j.ogm.version>4.0.0-SNAPSHOT</neo4j.ogm.version>
-		<springdata.commons>2.6.0-SNAPSHOT</springdata.commons>
+		<neo4j.ogm.version>4.0.4</neo4j.ogm.version>
+		<springdata.commons>3.0.3</springdata.commons>
 	</properties>
 
 	<developers>
